fixed a bug where boxes would overflow the screen and make them unviewable. this happened when a certain number of them are generated

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,8 +7,6 @@ html{
 }
 body{
     font-family:'Outfit';
-    margin:0;
-    padding:0px;
     height:100%;
     align-content:center;
     justify-items:center;
@@ -17,6 +15,8 @@ body{
     display:flex;
     flex-direction:column;
     width:max-content;
+    margin-right: auto;
+    margin-left: auto;
     border:4px solid black;
     border-radius: 2em;
     background:white;
